working finished setup with flickering TopAppBar

--- a/feature-album-detail/src/main/res/values/strings.xml
+++ b/feature-album-detail/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="album_details_fragment_label">Album Details Fragment</string>
+    <string name="album_details_title">Album Details</string>
 </resources>
