--- a/feature-album-detail/src/main/res/values/strings.xml
+++ b/feature-album-detail/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="album_details_title">Album Details</string>
+    <string name="album_details_loading_error">Error loading album details.</string>
 </resources>
