--- a/feature-album-overview/src/main/res/values/strings.xml
+++ b/feature-album-overview/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="album_overview_title">Album Overview</string>
+    <string name="album_overview_loading_error">Error loading albums.</string>
 </resources>
